binarytea/src/main/resources/binarytea-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: binarytea
  namespace: tea
  labels:
    app: binarytea
spec:
  replicas: 2
  selector:
    matchLabels:
      app: binarytea
  template:
    metadata:
      labels:
        app: binarytea
    spec:
      containers:
        - name: binarytea
          image: 192.168.66.10:5000/binarytea:v1.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: binarytea
  namespace: tea
spec:
  type: ClusterIP
  selector:
    app: binarytea
  ports:
    - port: 8080
      targetPort: 8080
