binarytea/src/main/resources/binarytea-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: binarytea-ingress
  namespace: tea
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: rings.binarytea.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: binarytea
                port:
                  number: 8080

---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: "k8s.io/ingress-nginx"
